src/objects/Order__c.object
<CustomObject>
    <description>Customer orders from CRM</description>
    <fields>
        <fullName>BillingFrequency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>A link to billing frequency object</description>
        <inlineHelpText>Select billing frequency</inlineHelpText>
        <label>Billing Frequency</label>
        <referenceTo>BillingFrequency__c</referenceTo>
        <relationshipLabel>Order Billing Frequency</relationshipLabel>
        <relationshipName>OrderBillingFrequency</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Enter comments</inlineHelpText>
        <label>Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ContractExists__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate whether a contract already exists</description>
        <inlineHelpText>Must be checked for orders within existing contracts</inlineHelpText>
        <label>Contract Exists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CreditCardID__c</fullName>
        <description>Credit card ID.  A link to Credit Card Object</description>
        <inlineHelpText>Enter Credit Card ID. Note credit card number</inlineHelpText>
        <label>Credit Card ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CurrentNet__c</fullName>
        <description>Summary on current net from Order lines</description>
        <label>Current Net</label>
        <summarizedField>OrderLine__c.CurrentNet__c</summarizedField>
        <summaryForeignKey>OrderLine__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Link to customer object</description>
        <label>Customer</label>
        <referenceTo>Customer__c</referenceTo>
        <relationshipLabel>Orders</relationshipLabel>
        <relationshipName>Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <description>Sum of discount from order line</description>
        <label>Discount</label>
        <summarizedField>OrderLine__c.Discount__c</summarizedField>
        <summaryForeignKey>OrderLine__c.Order__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FunctionalCurrency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Function Current</description>
        <inlineHelpText>Select functional currency</inlineHelpText>
        <label>Functional Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Functional Currency</relationshipLabel>
        <relationshipName>Currency</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IsEmailInvoice__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate whether invoice is emailed</description>
        <inlineHelpText>Must be checked for invoices to be delivered electronically by email</inlineHelpText>
        <label>Email Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsNewOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate whether this is a new order</description>
        <inlineHelpText>Must be checked for new orders</inlineHelpText>
        <label>Is New Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsRecurringOrder__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicate a recurring order</description>
        <inlineHelpText>Must be checked for recurring orders</inlineHelpText>
        <label>Is Recurring Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderNbr__c</fullName>
        <description>Order Number in CRM</description>
        <inlineHelpText>Enter Order Number. This value is mandatory</inlineHelpText>
        <label>OrderNbr</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <description>Order Status, Can be active 1, Suspended 2, Declined 3 etc</description>
        <inlineHelpText>Enter Order Status</inlineHelpText>
        <label>OrderStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
                <value>
                    <fullName>Voided</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReportingCurrency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Reporting currency</description>
        <inlineHelpText>Select reporting currency</inlineHelpText>
        <label>Reporting Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Reporting Currency</relationshipLabel>
        <relationshipName>OrderReportingCurrency</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ServiceCancelDate__c</fullName>
        <description>Service Cancel Date</description>
        <inlineHelpText>Enter service cancel date when applicable</inlineHelpText>
        <label>ServiceCancelDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceEndDate__c</fullName>
        <defaultValue>Today()+30</defaultValue>
        <description>Service End Date</description>
        <inlineHelpText>Enter Service End Date</inlineHelpText>
        <label>Service End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ServiceStartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when service starts</description>
        <inlineHelpText>Enter Service Start Date</inlineHelpText>
        <label>Service Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SoldByPartnerNbr__c</fullName>
        <description>Partner ID number linking to Partner object</description>
        <inlineHelpText>Enter Partner ID number</inlineHelpText>
        <label>Sold By Partner Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>ORD-{00000000}</displayFormat>
        <label>Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>